--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Robson Outfitters
+email: robsonoutfitters@silverstar.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Robson Outfitters specializes in quality archery, and guided rifle hunts for trophy deer, elk, bear, grouse, duck and geese in Eastern Idaho.
+  Teton Valley, Rexburg, Driggs, Tetonia, Felt.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.robsonoutfitters.com" # the base hostname & protocol for your site
+slogan: "Specializing in Big Game and Wilderness Adventures!"
 
 # Build settings
 markdown: kramdown
