--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Robson Outfitters
-email: robsonoutfitters@silverstar.com
+email: robsonoutfitters@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Robson Outfitters specializes in quality archery, and guided rifle hunts for trophy deer, elk, bear, grouse, duck and geese based in Eastern Idaho in the iconic Teton Valley.
 baseurl: "/robsonoutfitters/" # the subpath of your site, e.g. /blog/
