--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Robson Outfitters
+title: Hunt Teton Valley with Robson Outfitters
 email: robsonoutfitters@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Robson Outfitters specializes in quality archery, and guided rifle hunts for trophy deer, elk, bear, grouse, duck and geese based in Eastern Idaho in the iconic Teton Valley.
